cmake_minimum_required (VERSION 2.6)
project(grape)
include_directories(include)
add_subdirectory(src)
set( CMAKE_CXX_FLAGS "-O3")
add_executable(grape main.cpp)
target_link_libraries (grape call)
target_link_libraries (grape argparser)
target_link_libraries (grape BM)
target_link_libraries (grape pthread)
